[package]
name = "wav-to-morse"
version = "0.1.0"
authors = ["Aaron Korte <github@aaronkorte.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
plotlib = "0.5.1"
num = "0.3.0"
rustfft = "4.0.0"
clap = {version = "2.33", features = ["yaml"]}